<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <properties>
        <project.name>enum-toolkit</project.name>
        <project.description>Java library to simplify the enum management</project.description>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.url>https://github.com/jdussouillez/enum-toolkit</project.url>
    </properties>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.jdussouillez</groupId>
    <artifactId>enum-toolkit</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>${project.name}</name>
    <description>${project.description}</description>
    <url>${project.url}</url>

    <modules>
        <module>enum-toolkit-core</module>
    </modules>

    <profiles>
        <profile>
            <id>dev</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!argLine</name>
                </property>
            </activation>
            <properties>
                <profile.id>dev</profile.id>
                <project.environment>dev</project.environment>
                <project.debug>true</project.debug>
                <argLine></argLine>
                <test.unit.skip>false</test.unit.skip>
            </properties>
        </profile>

        <profile>
            <id>prod</id>
            <properties>
                <profile.id>prod</profile.id>
                <project.environment>prod</project.environment>
                <project.debug>false</project.debug>
                <test.unit.skip>false</test.unit.skip>
            </properties>
        </profile>
    </profiles>

    <developers>
        <developer>
            <id>DUSSOUILLE</id>
            <name>Junior DUSSOUILLEZ</name>
            <url>https://github.com/jdussouillez</url>
        </developer>
    </developers>

    <dependencies>
    </dependencies>

    <build>
        <plugins>
            <!-- Compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Maven Enforcer -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-runtime-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <message>Java 11+ required</message>
                                    <version>11.0</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <message>Maven 3.6+ required</message>
                                    <version>3.6</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Code coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.6</version>
                <executions>
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <skip>${test.unit.skip}</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <skip>${test.unit.skip}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <skipTests>${test.unit.skip}</skipTests>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>
                        -Dnet.bytebuddy.experimental=true @{argLine} -Dfile.encoding=${project.reporting.outputEncoding}
                    </argLine>
                    <trimStackTrace>false</trimStackTrace>
                </configuration>
            </plugin>

            <!-- Checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.1</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.40</version>
                    </dependency>
                    <dependency>
                        <groupId>com.github.sevntu-checkstyle</groupId>
                        <artifactId>sevntu-checks</artifactId>
                        <version>1.38.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <consoleOutput>true</consoleOutput>
                    <encoding>UTF-8</encoding>
                    <failsOnError>true</failsOnError>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <linkXRef>false</linkXRef>
                </configuration>
                <executions>
                    <execution>
                        <id>checkstyle</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
